--- a/codebase/static/css/main.css
+++ b/codebase/static/css/main.css
@@ -139,3 +139,9 @@ body {
     transform: translateX(-1700px)
   }
 }
+
+@media (max-width: 768px) {
+  #main {
+    width: 90%;
+  }
+}
